# reaper-server

./: .gitignore  .gitmodules  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  reaper.py
.github/workflows/: docker-build.yml
templates/: about.html  analyze.html  analyze_apps.html  analyze_dead.html  analyze_reports.html  analyze_summary.html  base.html  index.html  upload_page.html
