[project]
name = "2025-06-04-reaper"
version = "0.1.0"
description = "Simple Flask application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.3.0",
    "ruff>=0.1.6",
]

[tool.ruff]
# Allow lines to be as long as 100 characters
line-length = 100

# Target Python 3.13
target-version = "py313"

# Use 2 spaces for indentation
indent-width = 2

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and 
# a subset of the pydocstyle (D) codes
select = ["E", "F", "I", "D4"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["reaper"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
